[style]: responsive width on mobile fixes

--- a/src/style/style-todo.css
+++ b/src/style/style-todo.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
 }
 .content {
   border: 3px solid #fff;
@@ -13,6 +13,12 @@
   height: 100%;
   overflow-y: auto;
   border-radius: 20px;
+}
+@media screen and (max-width: 600px) {
+  .content {
+    width: calc(100% - 90px);
+    margin: 20px;
+  }
 }
 .add-section {
   padding: 10px 0;
